<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spinnerbk"
    android:orientation="vertical"
    tools:context=".ChooseLocation">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/chklk"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewSelectedCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/bkeditview"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/click_to_select_a_city"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:text="@string/proceed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:padding="20dp"
        android:text="@string/to_find_the_nearest_cozy_cup_caf_and_offer_location_based_deals_we_need_access_to_your_location_your_privacy_is_important_and_we_won_t_share_your_data"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:srcCompat="@drawable/chini" />

    <TextView
        android:id="@+id/Cozy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:text="@string/cozy_cup"
        android:textAlignment="center"
        android:textColor="#121210"
        android:textSize="50sp" />


</LinearLayout>