<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Activity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:srcCompat="@drawable/man" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/upload_image"
                android:textColor="#121111"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="90dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#161515" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bkeditview"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bkeditview"
                android:ems="10"
                android:hint="@string/contact_91"
                android:inputType="phone"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bkeditview"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bkeditview"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:text="@string/register"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view2"
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:background="#EB1B1B" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/or_with" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:background="#EB1B1B" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/instabk"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/linkedin"
                    android:textColor="#F4F2F2"
                    app:drawableLeftCompat="@drawable/linkedin" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/googlebk"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/google"
                    android:textColor="#F4F2F2"
                    app:drawableLeftCompat="@drawable/chrome" />
            </LinearLayout>

            <TextView
                android:id="@+id/alreadybtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/already_have_an_account_login"
                android:textColor="#101010"
                android:textStyle="bold" />

        </LinearLayout>

        </ScrollView>

    </LinearLayout>
</LinearLayout>