<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignIn_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/chini" />

                <TextView
                    android:id="@+id/Cozy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="cursive"
                    android:text="@string/cozy_cup"
                    android:textAlignment="center"
                    android:textColor="#121210"
                    android:textSize="80sp" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bkeditview"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bkeditview"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="Sign In"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:background="#EB1B1B" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or_with" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:background="#EB1B1B" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/instabk"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/linkedin"
                        android:textColor="#F4F2F2"
                        app:drawableLeftCompat="@drawable/linkedin" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/googlebk"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/google"
                        android:textColor="#F4F2F2"
                        app:drawableLeftCompat="@drawable/chrome" />
                </LinearLayout>

                <TextView
                    android:id="@+id/alreadybtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="Want to create an Account ?"
                    android:textColor="#101010"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>