<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cartimage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/cartfoodname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/yeon"
                android:text="@string/textview"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/cartprice"
                app:layout_constraintStart_toEndOf="@+id/cartimage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cartprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/yeon"
                android:text="@string/textviewa"
                android:textColor="@color/green"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cartimage"
                app:layout_constraintTop_toBottomOf="@+id/cartfoodname" />

            <ImageButton
                android:id="@+id/minusbtn"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@+id/cartimage"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/remove" />

            <ImageButton
                android:id="@+id/plusbtn"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/plus" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/_1"
                app:layout_constraintEnd_toStartOf="@+id/plusbtn"
                app:layout_constraintStart_toEndOf="@+id/minusbtn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/deletebtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/minusbtn"
                app:layout_constraintTop_toBottomOf="@+id/quantity"
                app:srcCompat="@drawable/trashbin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>